--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="./index.html"><span>Web</span>Studio</a>
         <ul>
           <li><a href="./index.html">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
+          <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="#contacts">Контакти</a></li>
         </ul>
       </nav>
