--- a/portfolio.html
+++ b/portfolio.html
@@ -41,47 +41,92 @@
 
       <ul>
         <li>
-          <img src="./images/portfolio/tehnokryak.jpg" alt="" />
+          <img
+            src="./images/portfolio/tehnokryak.jpg"
+            alt=""
+            width="370"
+            height="294"
+          />
           <p>Технокряк</p>
           <p>Веб-сайт</p>
         </li>
         <li>
-          <img src="./images/portfolio/golden-star.jpg" alt="" />
+          <img
+            src="./images/portfolio/golden-star.jpg"
+            alt=""
+            width="370"
+            height="294"
+          />
           <p>Постер New Orlean vs Golden Star</p>
           <p>Дизайн</p>
         </li>
         <li>
-          <img src="./images/portfolio/seafood.jpg" alt="" />
+          <img
+            src="./images/portfolio/seafood.jpg"
+            alt=""
+            width="370"
+            height="294"
+          />
           <p>Ресторан Seafood</p>
           <p>Додаток</p>
         </li>
         <li>
-          <img src="./images/portfolio/prime.jpg" alt="" />
+          <img
+            src="./images/portfolio/prime.jpg"
+            alt=""
+            width="370"
+            height="294"
+          />
           <p>Проєкт Prime</p>
           <p>Маркетинг</p>
         </li>
         <li>
-          <img src="./images/portfolio/boxes.jpg" alt="" />
+          <img
+            src="./images/portfolio/boxes.jpg"
+            alt=""
+            width="370"
+            height="294"
+          />
           <p>Проєкт Boxes</p>
           <p>Додаток</p>
         </li>
         <li>
-          <img src="./images/portfolio/inspiration.jpg" alt="" />
+          <img
+            src="./images/portfolio/inspiration.jpg"
+            alt=""
+            width="370"
+            height="294"
+          />
           <p>Inspiration has no Borders</p>
           <p>Веб-сайт</p>
         </li>
         <li>
-          <img src="./images/portfolio/limited-edition.jpg" alt="" />
+          <img
+            src="./images/portfolio/limited-edition.jpg"
+            alt=""
+            width="370"
+            height="294"
+          />
           <p>Видання Limited Edition</p>
           <p>Дизайн</p>
         </li>
         <li>
-          <img src="./images/portfolio/lab.jpg" alt="" />
+          <img
+            src="./images/portfolio/lab.jpg"
+            alt=""
+            width="370"
+            height="294"
+          />
           <p>Проєкт LAB</p>
           <p>Маркетинг</p>
         </li>
         <li>
-          <img src="./images/portfolio/growing-business.jpg" alt="" />
+          <img
+            src="./images/portfolio/growing-business.jpg"
+            alt=""
+            width="370"
+            height="294"
+          />
           <p>Growing Business</p>
           <p>Додаток</p>
         </li>
