--- a/portfolio.html
+++ b/portfolio.html
@@ -32,11 +32,11 @@
     <!-- Унікальний контент сторінки -->
     <main>
       <ul>
-        <li>Усі</li>
-        <li>Веб-сайти</li>
-        <li>Додатки</li>
-        <li>Дизайн</li>
-        <li>Маркетинг</li>
+        <li><button type="button">Усі</button></li>
+        <li><button type="button">Веб-сайти</button></li>
+        <li><button type="button">Додатки</button></li>
+        <li><button type="button">Дизайн</button></li>
+        <li><button type="button">Маркетинг</button></li>
       </ul>
 
       <ul>
