--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
         <a href="./index.html"><span>Web</span>Studio</a>
         <ul>
-          <li><a href="./index.html">Студія</a></li>
+          <li><a class="link" href="./index.html">Студія</a></li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="#contacts">Контакти</a></li>
         </ul>
